# augmented-carpentry

./: .gitattributes  .gitignore  .gitmodules  404.html  ACConfig.h.in  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DartConfiguration.tcl  Dockerfile  Doxyfile  README.md  TEMP_notes.txt  build.sh  codemeta.json  config.ini  configure.sh  contributing.md  default_config.ini  environment.yml  how q  imgui.ini  index.html  main.cpp  make2run.sh  manifest.yml  mkdocs.yml  paper.md  run.sh  sitemap.xml  tasks.py  tmp
.github/ISSUE_TEMPLATE/: add_tool.md  bug_report.md  config.yml  doc_report.md  feature_request.md
.github/workflows/: changelog-build.yml  doc-build.yml  docker-cmake-build-and-test.yml  docker-cmake-build.yml  docker-tests.yml  docker-ubuntu-build-and-test.yml  docker-ubuntu-build.yml  gh-build.yml  joss-pdf-build.yml
acdoxygen/ACApp_8cpp/: index.html
acdoxygen/ACApp_8cpp_source/: index.html
acdoxygen/ACInfoModel_8cpp/: index.html
acdoxygen/ACInfoModel_8cpp_source/: index.html
acdoxygen/ACInfoModel_8h/: index.html
acdoxygen/ACInfoModel_8h_source/: index.html
acdoxygen/ACInfoToolheadManager_8cpp/: index.html
acdoxygen/ACInfoToolheadManager_8cpp_source/: index.html
acdoxygen/ACInfoToolheadManager_8h/: index.html
acdoxygen/ACInfoToolheadManager_8h_source/: index.html
acdoxygen/ACInfoToolhead_8cpp/: index.html
acdoxygen/ACInfoToolhead_8cpp_source/: index.html
acdoxygen/ACInfoToolhead_8h/: index.html
acdoxygen/ACInfoToolhead_8h_source/: index.html
acdoxygen/AIAC_2GeometryUtils_8h/: index.html
acdoxygen/AIAC_2GeometryUtils_8h_source/: index.html
acdoxygen/AIAC_8h/: index.html
acdoxygen/AIAC_8h_source/: index.html
acdoxygen/ApplicationEvent_8cpp/: index.html
acdoxygen/ApplicationEvent_8cpp_source/: index.html
acdoxygen/ApplicationEvent_8h/: index.html
acdoxygen/ApplicationEvent_8h_source/: index.html
acdoxygen/Application_8cpp/: index.html
acdoxygen/Application_8cpp_source/: index.html
acdoxygen/Application_8h/: index.html
acdoxygen/Application_8h_source/: index.html
acdoxygen/Assert_8h/: index.html
acdoxygen/Assert_8h_source/: index.html
acdoxygen/Base_8h/: index.html
acdoxygen/Base_8h_source/: index.html
acdoxygen/CameraCalibrator_8cpp/: index.html
acdoxygen/CameraCalibrator_8cpp_source/: index.html
acdoxygen/CameraCalibrator_8h/: index.html
acdoxygen/CameraCalibrator_8h_source/: index.html
acdoxygen/CameraEvent_8cpp/: index.html
acdoxygen/CameraEvent_8cpp_source/: index.html
acdoxygen/CameraEvent_8h/: index.html
acdoxygen/CameraEvent_8h_source/: index.html
acdoxygen/Camera_8cpp/: index.html
acdoxygen/Camera_8cpp_source/: index.html
acdoxygen/Camera_8h/: index.html
acdoxygen/Camera_8h_source/: index.html
acdoxygen/CircularBuffer_8h/: index.html
acdoxygen/CircularBuffer_8h_source/: index.html
acdoxygen/ClrPalette_8h/: index.html
acdoxygen/ClrPalette_8h_source/: index.html
acdoxygen/Config_8cpp/: index.html
acdoxygen/Config_8cpp_source/: index.html
acdoxygen/Config_8h/: index.html
acdoxygen/Config_8h_source/: index.html
acdoxygen/CustomLogos_8h/: index.html
acdoxygen/CustomLogos_8h_source/: index.html
acdoxygen/CutBladeThicknessVisualizer_8cpp/: index.html
acdoxygen/CutBladeThicknessVisualizer_8cpp_source/: index.html
acdoxygen/CutBladeThicknessVisualizer_8h/: index.html
acdoxygen/CutBladeThicknessVisualizer_8h_source/: index.html
acdoxygen/CutChainSawFeedback_8cpp/: index.html
acdoxygen/CutChainSawFeedback_8cpp_source/: index.html
acdoxygen/DLoader_8cpp/: index.html
acrh/: .gitignore  20230627_190243.acim  20230627_190936.acim  20230627_221927.acim  20230627_225824.acim  20230627_234103.acim  20230628_111053.acim  20230628_112744.acim  20230628_112812.acim  20230628_115705.acim  20230628_140657.acim  20230628_141934.acim  20230706_141259.acim  20230706_141531.acim  20230707_112201.acim  20230707_161428.acim  20230707_161744.acim  20230707_162330.acim  20230707_162433.acim  20230707_165654.acim  20230707_170015.acim  20230707_171001.acim  20230707_171330.acim  20230714_114434.acim  20230714_114458.acim  20230714_115044.acim  20230714_115125.acim  20230714_115232.acim  20230714_115640.acim  20230714_115730.acim  20230714_120015.acim  20230714_120219.acim  20230714_120239.acim  20230714_120422.acim  20230717_073045.acim  20230717_095137.acim  20230717_095339.acim  20230717_100236.acim  20230717_100336.acim  20230717_100433.acim  (+44 more)
assets/: default_config.ini  tslam-final_eval.tgz  ttool-v2.0.0-34-g96053edf.tgz
augmented-woodworking/: index.html
blog/: index.html
build_feb14/: CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl
changelog/: index.html
cmake/: Findimgui.cmake  build.sh  configure.sh  external_tools.cmake  install_TSlam.sh  install_TTool.sh  install_glfw_3_3.sh  install_opencv_4_5_5.sh  install_opengl.sh  tests.cmake
contributing/: index.html
cpp-docs/: index.html
developer-guide/: index.html
docs/: .$NextPAC.drawio.bkp  .$NextPAC.drawio.dtmp  AIAC_pipeline.drawio  NextPAC.drawio  hardware-requirements.md  index.md  installation.md  interface.md  motivation.md  pull_request_template.md  sdesign.drawio  sensors.md  stickers.md  woodworking-tools.md
eval/: environment.eval.yml  readme.md
hardware/: index.html
installation/: index.html
invokes/: flagerize.py  versionize.py
javascripts/: extra.js
license/: index.html
mockups/: .gitignore  20240122_final_avantproj_v10_r8.3dm  20240122_final_avantproj_v10_r8.3dmbak  20240122_final_avantproj_v11_r8.3dm  20240419_164226.acim  acp_v4.ghx  acp_v5.ghx  holewallgh.ghx  readme.md  scaninspector.3dm  test.py
motivation/: index.html
paper/: paper.bib  paper.md  planning.md
proto/: scheme.md
publications/: index.html
rh/: main.py  notes.txt  workingrh.3dm  workingrh.3dm.rhl  workingrh.3dmbak
scripts/: generate_output.py
search/: search_index.json
src/: ACApp.cpp  AIAC.h  AIAC.hpp  aiacpch.cpp  aiacpch.h  main.cpp
stylesheets/: extra.css
tests/: CMakeLists.txt  allCppTests.cc
tests/graphics/: CMakeLists.txt  tester.cpp
util/: take_screenshot.sh
(+2046 files in other folders)
